--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Maria Oblasova and it's my professional page.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+<!-- 	   				<span>Front-end Developer</span> -->
+<!-- 	   				<span>UI/UX Designer</span>  -->
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -89,11 +89,8 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.facebook.com/MariaOblasova28"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.instagram.com/mariaoblasova28/"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -128,12 +125,12 @@
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<strong>Nom Prenom:</strong>
+   					<span>Mariia OBLASOVA</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<strong>Date de naissance:</strong>
+   					<span>28 Septembre 1990</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
@@ -141,11 +138,11 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+<!--    					<span>www.kardswebsite.com</span> -->
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>mariaoblasova28@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
