--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Maria CV</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">Maria CV</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -73,15 +73,15 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Maria Oblasova and it's my professional page.</h1>
+	   			<h5>Bonjour</h5>
+	   			<h1>C'est Maria Oblasova et c'est ma page professionel</h1>
 
 	   			<p class="intro-position">
 <!-- 	   				<span>Front-end Developer</span> -->
 <!-- 	   				<span>UI/UX Designer</span>  -->
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">En savoir plus</a>
 
 	   		</div>  
    			
@@ -104,13 +104,13 @@
    		<div class="col-twelve">
 
    			<h5>About</h5>
-   			<h1>Let me introduce myself.</h1>
+   			<h1>À propos de moi</h1>
 
    			<div class="intro-info">
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">Effectuant actuellement une année de Licence Pro de Management de projet Informatique et Commercial, à l’IUT Lannion et titulaire d’un Master Informatique, je recherche  d'un stage de 18 semaines pouvant débuter début fevrier.</p>
    			</div>   			
 
    		</div>   		
@@ -138,7 +138,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-<!--    					<span>www.kardswebsite.com</span> -->
+					<span>https://mariaoblasova.github.io/cv</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
