--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Maria CV</title>
+	<title>Site de Mariia OBLASOVA</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,18 +43,16 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">Maria CV</a>
-		      </div>		      
+		         <a href="index.html">Site de Mariia OBLASOVA</a>
+		      	</div>		      
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li class="current"><a class="smoothscroll"  href="#intro" title="">Accueil</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">À propos de moi</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Experience</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>		
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -74,7 +72,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Bonjour</h5>
-	   			<h1>C'est Maria Oblasova et c'est ma page professionel</h1>
+	   			<h1>Je suis Maria Oblasova et c'est ma page professionelle</h1>
 
 	   			<p class="intro-position">
 <!-- 	   				<span>Front-end Developer</span> -->
@@ -103,14 +101,10 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>About</h5>
-   			<h1>À propos de moi</h1>
-
+   			<h5>À propos de moi</h5>
    			<div class="intro-info">
-
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
-
-   				<p class="lead">Effectuant actuellement une année de Licence Pro de Management de projet Informatique et Commercial, à l’IUT Lannion et titulaire d’un Master Informatique, je recherche  d'un stage de 18 semaines pouvant débuter début fevrier.</p>
+   				<img src="images/photo_Maria.jpeg" alt="Profile Picture">
+   				<p class="lead">Effectuant actuellement une année de Licence Pro de Management de projet Informatique et Commercial, à l’IUT Lannion et titulaire d’un Master Informatique, je recherche  d'un stage de 18 semaines à partir de début février</p>
    			</div>   			
 
    		</div>   		
@@ -121,29 +115,18 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
-
    			<ul class="info-list">
-   				<li>
-   					<strong>Nom Prenom:</strong>
-   					<span>Mariia OBLASOVA</span>
-   				</li>
-   				<li>
-   					<strong>Date de naissance:</strong>
-   					<span>28 Septembre 1990</span>
-   				</li>
-   				<li>
-   					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
-   				</li>
-   				<li>
-   					<strong>Website:</strong>
-					<span>https://mariaoblasova.github.io/cv</span>
-   				</li>
-   				<li>
-   					<strong>Email:</strong>
-   					<span>mariaoblasova28@gmail.com</span>
-   				</li>
+   				<li><strong>Nom Prenom: </strong><span>Mariia OBLASOVA</span></li>
+   				<li><strong>Date de naissance: </strong><span>28 Septembre 1990</span></li>
+   				<li><strong>Website: </strong><span>https://mariaoblasova.github.io/cv</span></li>
+   				<li><strong>Email: </strong><span>mariaoblasova28@gmail.com</span></li>
+				<li><strong>Langues:</strong>
+			   <ul>
+				<li>russe (maternelle)</li>
+		  		<li>ukrainienne (maternelle)</li>
+		    		<li>anglais (C1)</li>
+		  		<li>français (B2-C1)</li>
+   			   </ul>
 
    			</ul> <!-- /info-list -->
 
@@ -151,9 +134,7 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
-
+   			<h3>Compétances professionnelles</h3>
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
