--- a/index.html
+++ b/index.html
@@ -116,11 +116,10 @@
 
    			<h3>Profile</h3>
    			<ul class="info-list">
-   				<li><strong>Nom Prenom: </strong><span>Mariia OBLASOVA</span></li>
+   				<li><strong>Prenom Nom: </strong><span>Mariia OBLASOVA</span></li>
    				<li><strong>Date de naissance: </strong><span>28 Septembre 1990</span></li>
-   				<li><strong>Website: </strong><span>https://mariaoblasova.github.io/cv</span></li>
    				<li><strong>Email: </strong><span>mariaoblasova28@gmail.com</span></li>
-				<li><strong>Langues:</strong>
+				<li><strong>Langues: </strong>
 			   <ul>
 				<li>russe (maternelle)</li>
 		  		<li>ukrainienne (maternelle)</li>
@@ -137,25 +136,32 @@
    			<h3>Compétances professionnelles</h3>
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<div class="progress percent75"><span>75%</span></div>
+				   	<strong>Wordpress</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<strong>HTML</strong>
 				   </li>
+				   <li>
+				   	<div class="progress percent60"><span>60%</span></div>
+				   	<strong>CSS</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent75"><span>75%</span></div>
+				   	<strong>Adobe Illustrator</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent85"><span>85%</span></div>
+				   	<strong>Adobe InDesign</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent90"><span>90%</span></div>
+				   	<strong>Adobe Photoshop</strong>
+				   </li>	
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
-				   </li>
-				   <li>
-
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<strong>MS Office</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -166,8 +172,8 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Embauchez-moi</a>
+   			<a href="./images/cv.pdf" title="Download CV" class="button button-primary">Télécharge mon CV</a>
    		</div>   		
    	</div>
 
