--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
    			<h5>À propos de moi</h5>
    			<div class="intro-info">
-   				<img src="images/photo_Maria.jpeg" alt="Profile Picture">
-   				<p class="lead">Effectuant actuellement une année de Licence Pro de Management de projet Informatique et Commercial, à l’IUT Lannion et titulaire d’un Master Informatique, je recherche  d'un stage de 18 semaines à partir de début février</p>
+   				<img src="images/photo_Maria.jpg" alt="Profile Picture">
+   				<p class="lead">Effectuant actuellement une année de Licence Pro de Management de projet Informatique et Commercial, à l’IUT Lannion et titulaire d’un Master Informatique, je recherche  d'un stage de 18 semaines à partir de début février.</p>
    			</div>   			
 
    		</div>   		
@@ -188,9 +188,8 @@
    		<div class="col-twelve">
 
    			<h5>Resume</h5>
-   			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Mon parcours professionnel dans le domaine de l'informatique et du graphisme me confère aujourd'hui la capacité de m'adapter parfaitement aux besoins d’une entreprise et à toutes les situations.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -199,7 +198,7 @@
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Work Experience</h2>
+   			<h2>Experiences professionnelles</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -210,17 +209,22 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Service Volontaire Européen</h3>
+	   					<p>Oct 2016 - Sep 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>CEMEA (Centres d'Entrainement aux Methodes d'Education Active) - Tours, France</h4>
+	   		<ul>
+				<li>assistante numerique;</li>
+				<li>animatrice dans le cadre d’ateliers pour la réussite éducative à l’Ecole Rotière, Joué-lès-Tours;</li> 
+				<li>accompagnement de volontaires européens; préparation à la mobilité;</li>
+				<li>préparation et organisation de l'échange international de jeunes à Bourges (avril 2017).</li>
+			    </ul>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -228,39 +232,27 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Responsable de projet</h3>
+	   					<p>Sep 2008 - Sep 2016</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>ONG «Yaskrava Kraina» - Dnipro, Ukraine</h4>
+                            <ul>
+				<li>coordinatrice et responsable de festivals artistiques pour enfants (Ukraine et Europe);</li>
+				<li>responsable communication numérique du projet (site web, réseaux sociaux, e-mailing);</li> 
+				<li>rédactrice en chef et maquétiste du magazine mensuel du projet;</li>
+				<li>responsable des RH.</li>
+			    </ul>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
-
+	   		
    			</div> <!-- /timeline-wrap -->   			
 
    		</div> <!-- /col-twelve -->
@@ -282,17 +274,16 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Licence PRO Management de projet informatique et commercial</h3>
+	   					<p>Sep 2017 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>IUT de Lannion, France</h4>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -300,17 +291,16 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Master Informatique</h3>
+	   					<p>Sep 2008 - Jan 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Universite Nationale de Dnipro, Ukraine</h4>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -318,17 +308,16 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Licence 3 MIAGE</h3>
+	   					<p>Sep 2011 - June 2012</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Universite de Bordeaux, France</h4>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
