--- a/index.html
+++ b/index.html
@@ -186,11 +186,8 @@
 
 		<div class="row section-intro">
    		<div class="col-twelve">
-
    			<h5>Resume</h5>
-
    			<p class="lead">Mon parcours professionnel dans le domaine de l'informatique et du graphisme me confère aujourd'hui la capacité de m'adapter parfaitement aux besoins d’une entreprise et à toutes les situations.</p>
-
    		</div>   		
    	</div> <!-- /section-intro--> 
 
@@ -263,7 +260,7 @@
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Education</h2>
+   			<h2>Formation</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -278,12 +275,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Licence PRO Management de projet informatique et commercial</h3>
+	   					<h3>Licence PRO</h3>
 	   					<p>Sep 2017 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>IUT de Lannion, France</h4>
+						<span>Management de projet informatique et commercial</span>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -295,12 +293,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Informatique</h3>
+	   					<h3>Master</h3>
 	   					<p>Sep 2008 - Jan 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Universite Nationale de Dnipro, Ukraine</h4>
+						<span>Informatique</span>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -312,12 +311,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Licence 3 MIAGE</h3>
+	   					<h3>Licence 3</h3>
 	   					<p>Sep 2011 - June 2012</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Universite de Bordeaux, France</h4>
+						<span>Méthodes informatiques appliquées à la gestion des entreprises</span>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
