--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Accueil</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">À propos de moi</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Experience</a></li>
+						<li><a class="smoothscroll"  href="#study" title="">Formation</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>		
 					</ul>
@@ -255,6 +256,9 @@
    		</div> <!-- /col-twelve -->
    		
    	</div> <!-- /resume-timeline -->
+	</section>
+		
+	<section id="study" class="grey-section">
    	
    	<div class="row resume-timeline">
 
