--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Site de Mariia OBLASOVA</title>
+	<title>Site de Mariia</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">Site de Mariia OBLASOVA</a>
+		         <a href="index.html">Site de Mariia</a>
 		      	</div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -73,7 +73,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Bonjour</h5>
-	   			<h1>Je suis Maria Oblasova et c'est ma page professionelle</h1>
+	   			<h1>Je suis Maraia Oblasova<br> et c'est ma page professionelle</h1>
 
 	   			<p class="intro-position">
 <!-- 	   				<span>Front-end Developer</span> -->
@@ -256,9 +256,7 @@
    		</div> <!-- /col-twelve -->
    		
    	</div> <!-- /resume-timeline -->
-	</section>
 		
-	<section id="study" class="grey-section">
    	
    	<div class="row resume-timeline">
 
