--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
    				<i class="icon-mail"></i>
    			</div>
    			<h5>Ecrivez-moi à</h5>
-   			<p><a href="mailto:mariaoblasova28@gmail.com">mariaoblasova28@gmail.com</a></p>
+   			<p><a href="mailto:mariaoblasova28@gmail.com" style="color: #FFFFFF">mariaoblasova28@gmail.com</a></p>
    		</div>
 
    		<div class="col-four tab-full">
