--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Bonjour</h5>
-	   			<h1>Je suis Maraia Oblasova<br> et c'est ma page professionelle</h1>
+	   			<h1>Je suis Mariia Oblasova<p> et c'est ma page professionelle</h1>
 
 	   			<p class="intro-position">
 <!-- 	   				<span>Front-end Developer</span> -->
@@ -417,7 +417,7 @@
    				<i class="icon-mail"></i>
    			</div>
    			<h5>Ecrivez-moi à</h5>
-   			<p><a href="mailto:mariaoblasova28@gmail.com" style="color: #FFFFFF">mariaoblasova28@gmail.com</a></p>
+   			<p>mariaoblasova28@gmail.com</p>
    		</div>
 
    		<div class="col-four tab-full">
