--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Accueil</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">À propos de moi</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Experience</a></li>
-						<li><a class="smoothscroll"  href="#study" title="">Formation</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>		
 					</ul>
 				</nav>    		
