--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Accueil</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">À propos de moi</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Résumé</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>		
 					</ul>
 				</nav>    		
@@ -185,7 +185,7 @@
 
 		<div class="row section-intro">
    		<div class="col-twelve">
-   			<h5>Resume</h5>
+   			<h5>Résumé</h5>
    			<p class="lead">Mon parcours professionnel dans le domaine de l'informatique et du graphisme me confère aujourd'hui la capacité de m'adapter parfaitement aux besoins d’une entreprise et à toutes les situations.</p>
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -340,7 +340,7 @@
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1>Laissez votre message :</h1>
+   			<h1>Laissez votre message:</h1>
 
    		</div> 
    	</div> <!-- /section-intro -->
