--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Bonjour</h5>
-	   			<h1>Je suis Mariia Oblasova<p> et c'est ma page professionelle</h1>
+	   			<h1>Je suis Mariia Oblasova<p> et c'est mon site</h1>
 
 	   			<p class="intro-position">
 <!-- 	   				<span>Front-end Developer</span> -->
