--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
    				<i class="icon-pin"></i>
    			</div>
 
-   			<h5>Où me trouver</h5>
+   			<h5>Trouvez-moi à</h5>
 
    			<p>
 				app. 8, 10 rue de Crec'h Tanet<br>
@@ -422,7 +422,7 @@
    			<div class="icon">
    				<i class="icon-phone"></i>
    			</div>
-   			<h5>Appelle moi a</h5>
+   			<h5>Appellez-moi à</h5>
    			<p>Mobile: +33 06 24 31 85 11</p>
    		</div>
    		
